Updated style sheet to fix map text cut off

--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ footer p {
     margin-left: auto;
     margin-right: auto;
     padding-top: 10px;
+    min-height: 3000px;
   }
 
 /* culture page */
